--- a/style.css
+++ b/style.css
@@ -11,3 +11,10 @@
 .main {
  margin: 10px;
 }
+
+.login-page {
+ background-position: center;
+ width: 360px;
+ padding: 10% 0 0;
+ margin: auto;
+}
