--- a/style.css
+++ b/style.css
@@ -16,13 +16,13 @@
  width: 360px;
  padding: 10% 0 0;
  margin: auto;
- backgroung: #565d6b;
+ background: #565d6b;
 }
 
 .form {
  position: relative;
  z-index: 1;
- background: #000000;
+ background: #ffffff;
  max-width: 360px;
  margin: 0 auto 100px;
  padding: 45px;
