--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  background: #565d6b;
+}
+
 .title {
  text-align: center;
  margin-top: 10px;
@@ -16,7 +20,6 @@
  width: 360px;
  padding: 10% 0 0;
  margin: auto;
- background: #565d6b;
 }
 
 .form {
