--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
- background: #e1e9f7
+ background: #000000
 }
 
 .title {
@@ -25,7 +25,7 @@ body {
 .form {
  position: relative;
  z-index: 1;
- background: #ffffff;
+ background: #e1e9f7;
  max-width: 360px;
  margin: 0 auto 100px;
  padding: 45px;
