--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
- background: #000000
+ background: #ffffff
 }
 
 .title {
@@ -9,7 +9,7 @@ body {
 
 .menu {
  text-align: center;
- color: #000000;
+ color: #ffffff;
 }
 
 .main {
