--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .login-page {
- width: 360px;
+ width: 400px;
  padding: 10% 0 0;
  margin: auto;
 }
@@ -26,7 +26,7 @@ body {
  position: relative;
  z-index: 1;
  background: #e1e9f7;
- max-width: 360px;
+ max-width: 600px;
  margin: 0 auto 100px;
  padding: 45px;
  text-align: center;
@@ -36,6 +36,6 @@ input {
  margin: 5px;
 }
 
-button {
- margin:5px;
+.sign-in-button {
+ margin-top: 20px;
 }
